# phobos

./: .clang_complete  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  gdbinit  install-toolchain.sh  kollmorgen-torque-mode.akd  kollmorgen-velocity-mode.akd  openocd_olimex-arm-usb-tiny-h_stm32f4.cfg  toolchain-gcc-arm-none-eabi-4_9-2015q3.cmake  toolchain-gcc-arm-none-eabi-5_3-2016q1.cmake  toolchain-gcc-arm-none-eabi-5_4-2016q2.cmake
board/: board.c  board.cmake  board.h
demos/: CMakeLists.txt
demos/adc/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h
demos/bicycle/: CMakeLists.txt  README.md  main.cc
demos/dac/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h
demos/eigen/: CMakeLists.txt  README.md  main.cc
demos/encoder/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h
demos/encoder_hots/: CMakeLists.txt  README.md  main.cc
demos/encoder_index/: CMakeLists.txt  README.md  halconf.h  main.cc
demos/fatfs/: CMakeLists.txt  README.md  halconf.h  main.cc
demos/gpt_adc/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h
demos/pwm_encoder/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h
demos/usb_serial/: CMakeLists.txt  README.md  halconf.h  main.c  main.cc
inc/: analog.h  angle.h  blink.h  cobs.h  debug.h  encoder.h  encoderfoaw.h  encoderhots.h  extcfg.h  extconfig.h  foaw.h  foawencoder.h  gitsha1.h  iqhandler.h  printf.h  tsencoder.h  usbcfg.h  usbconfig.h  utility.h
inc/filter/: median.h  movingaverage.h  polyfit.h
inc/packet/: frame.h  framing.h  serialize.h
projects/: CMakeLists.txt
projects/clustril/: CMakeLists.txt  README.md  halconf.h  main.cc  mcuconf.h  printstate.cc  printstate.h  serialize.cc  virtualbicycle.cc  virtualbicycle.h
projects/drunlo/: CMakeLists.txt  Plot gyro sensor.ipynb  README.md  chconf.h  halconf.h  main.cc  mcuconf.h  plot_gyro_sensor.ipynb  printstate.cc  printstate.h
projects/flimnap/: CMakeLists.txt  README.md  chconf.h  main.cc  mcuconf.h  serialize.cc  syshooks.cc  syshooks.h  usbconfig.c
projects/gulliver/: CMakeLists.txt  README.md  main.cc
projects/hall/: CMakeLists.txt  README.md  main.cc
projects/inc/: filesystem.h  haptic.h  interpolated_lqr.h  messageutil.h  receiver.h  saconfig.h  sautility.h  simbicycle.h  simplebicycle.h  simsteerassembly.h  transmitter.h  txrx_common.h  virtualbicycle.h
projects/limtoc/: CMakeLists.txt  README.md  check_model_parameters.ipynb  limtoc.py  main.cc  plot_stiffness_damping.ipynb
projects/opik/: CMakeLists.txt  README.md  main.cc
projects/proto/: build.options  build.proto  clustril.options  clustril.proto  config.options  config.proto  generate_proto.py  pose.proto  simulation.options  simulation.proto  txrx.proto  txrx.proto.in
projects/reldresal/: CMakeLists.txt  README.md  halconf.h  kollmorgen-reldresal.akd  main.cc  model_parameter_estimates.ipynb  reldresal.py  steer_assembly_parameters.ipynb  torque_and_model_verification.ipynb  torque_wrench_verification.ipynb
projects/src/: filesystem.cc  haptic.cc  messageutil.cc  receiver.cc  simbicycle.hh  simplebicycle.cc  simsteerassembly.cc  transmitter.cc  txrx_common.cc  virtualbicycle.cc
proto/: messages.proto
scripts/: calculate_handlebar_inertia.py  calculate_lqr_gain.py  calculate_steer_torque_estimate.ipynb  controller_frequency_response.ipynb  kistler_torque_calibration.ipynb  load_pose.py  load_sim.py  motor_sinusoid_response.ipynb  motor_static_response.ipynb  plot_feedforward_signals.ipynb  plot_pose.py  plot_sim.py  plot_simulator_messages.ipynb  plot_whipple_delay_response.ipynb  print_velocity_stats.py  simulate_whipple_benchmark.py  test_hots.py  time_decode.py  tune_kalman_mass_spring.ipynb  whipple_frequency_response.ipynb
scripts/icsc2017/: generate_figures.py  generate_presentation_figures.py  plot_impulse_response.ipynb  whipple.pb
scripts/mass_spring/: plot_acc_logs.ipynb  tune_kalman_mass_spring.ipynb
scripts/phobos/: cobs.py  constants.py  display.py  kalman.py  load.py  pb.py  pose.py  pose_def.cc  sysid.py  util.py
scripts/phobos/vispy/: fig.py  plotwidget.py
scripts/python/: pose.py
src/: CMakeLists.txt  analog.cc  analog.hh  blink.cc  cobs.cc  encoder.cc  encoderfoaw.hh  encoderhots.hh  extcfg.cc  extconfig.cc  foaw.hh  foawencoder.hh  gitsha1.cc.in  iqhandler.hh  printf.c  tsencoder.hh  usbcfg.c  usbconfig.c
src/filter/: median.hh  movingaverage.hh
src/packet/: frame.cc  framing.cc  serialize.cc
tests/: CMakeLists.txt  README.md  test_cobs.cc  test_cobs_random.cc  test_cobs_util.cc  test_cobs_util.h  test_foaw.cc
tools/: CMakeLists.txt  README.md  pbprint.cc  printpbcobs.cc  seriallog.cc
travis/: build.bash  checkout-submodules.sh  install-boost.sh  install-eigen.sh  install-protobuf.sh
